# bisque

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  THIRD-PARTY-LICENSES.md  _typos.toml  about.hbs  about.toml  clippy.toml  codecov.yml  deny.toml  lefthook.yml  rustfmt.toml
.cargo/: config.toml  mutants.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  recommendation.yml
.github/scripts/: check-headers.sh
.github/workflows/: ci.yml  cla.yml  mutation.yml  pages.yml  release.yml
benches/: README.md  processors.rs
docs/: book.toml
docs/src/: SUMMARY.md  api-surface.md  architecture.md  authoring-processors.md  contributor-workflow.md  core-contract.md  getting-started.md  introduction.md  license.md  parameters-and-events.md  processing-blocks.md  processor-catalog.md  snapshots.md  testing.md
examples/: author_kernel.rs  offline_chain.rs  prepared_processor.rs  realtime_plugin.rs
src/: host.rs  lib.rs
src/analysis/: clip.rs  level.rs  loudness.rs  mean.rs  mod.rs  true_peak.rs  windowed_rms.rs
src/contract/: block.rs  context.rs  error.rs  mod.rs  param.rs  sample.rs  source.rs  spec.rs  traits.rs
src/dsp/: driver.rs  math.rs  memory.rs  mod.rs  oversample.rs  rng.rs  sanitize.rs
src/dynamics/: compressor.rs  expander.rs  gate.rs  mod.rs  shared.rs
src/filters/: biquad.rs  mod.rs  moving_average.rs
src/generators/: mod.rs  noise.rs  poly_blep.rs  sine.rs
src/mastering/: dither.rs  gain.rs  limiter.rs  mod.rs  scale.rs
src/repair/: dc_blocker.rs  dc_offset.rs  mod.rs
src/spectral/: fft.rs  mod.rs  spectral_filter.rs  stft.rs  window.rs
src/testing/: mod.rs  registry.rs  snapshot_cases.rs
src/time/: delay.rs  mod.rs  time_stretch.rs
testdata/: snapshots.manifest
testdata/snapshots/slices/: biquad-hp.sweep-stereo.slice  biquad-lp.sweep-stereo.slice  dc-blocker.tone-stereo.slice  dc-offset.tone-stereo.slice  dither16.tone-stereo.slice  gain-neg6db.tone-stereo.slice  limiter-default.loud-stereo.slice  scale-neg6db.tone-stereo.slice  timestretch-2x.tone-stereo.slice
tests/: analysis.rs  api.rs  dc_removal.rs  documentation.rs  dynamics.rs  filters.rs  flush.rs  generators.rs  host.rs  mastering.rs  no_alloc.rs  property.rs  registry_contract.rs  repair.rs  snapshots.rs  spectral.rs  spectral_no_alloc.rs  time.rs
tests/analysis/: meters.rs
tests/dynamics/: processors.rs
tests/filters/: biquad.rs  moving_average.rs
tests/generators/: processors.rs
tests/mastering/: dither.rs  gain.rs  limiter.rs  scale.rs
tests/repair/: dc_blocker.rs  dc_offset.rs
tests/spectral/: fft.rs  spectral_filter.rs  stft.rs  window.rs
tests/time/: delay.rs  time_stretch.rs
xtask/: Cargo.toml
xtask/src/: determinism.rs  docs.rs  listen.rs  main.rs
